// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepIndemnite /> should render cdd indemnite 1`] = `
.c0 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c1 {
  margin-bottom: 1.6rem;
}

.c2 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c3 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c4 {
  font-size: 1.4rem;
}

.c5 {
  margin: 1.6rem 0;
}

<div>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c0"
    >
      2000
    </strong>
     €.
  </p>
  <details>
    <summary
      class="c1"
    >
      Detail du calcul
    </summary>
    <div>
      <strong
        class="c2"
      >
        Élements saisis :
      </strong>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          somme des salaires
           : 
          20000
        </li>
      </ul>
      <strong
        class="c2"
      >
        Calcul :
      </strong>
      <div
        class="c5"
      >
        <div
          id="react-mathjax-preview"
        >
          <div
            id="react-mathjax-preview-result"
          >
            \`10/100 * somme(salaires)\`
          </div>
        </div>
      </div>
    </div>
  </details>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      title="Consultez l’article l1243-8 du code du travail"
    >
      Article L1243-8 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
      title="Consultez l’article l1243-9 du code du travail"
    >
      Article L1243-9 du code du travail
    </a>
  </p>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/fin-dun-contrat-a-duree-determinee-cdd"
    >
      salarié en CDD
    </a>
  </p>
</div>
`;

exports[`<StepIndemnite /> should render ctt indemnite 1`] = `
.c0 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c1 {
  margin-bottom: 1.6rem;
}

.c2 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c3 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c4 {
  font-size: 1.4rem;
}

.c5 {
  margin: 1.6rem 0;
}

<div>
  <p>
    La prime de précarité
     est estimée à 
    <strong
      class="c0"
    >
      300
    </strong>
     €.
  </p>
  <details>
    <summary
      class="c1"
    >
      Detail du calcul
    </summary>
    <div>
      <strong
        class="c2"
      >
        Élements saisis :
      </strong>
      <ul
        class="c3"
      >
        <li
          class="c4"
        >
          total des salaires
           : 
          3000
        </li>
      </ul>
      <strong
        class="c2"
      >
        Calcul :
      </strong>
      <div
        class="c5"
      >
        <div
          id="react-mathjax-preview"
        >
          <div
            id="react-mathjax-preview-result"
          >
            \`10/100 * "totalSalaires"\`
          </div>
        </div>
      </div>
    </div>
  </details>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901219&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      title="Consultez l’article l1243-8 du code du travail"
    >
      Article L1243-8 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do;jsessionid=0FA35871C82B78139407AE9BD9480D9B.tplgfr31s_2?idArticle=LEGIARTI000006901220&cidTexte=LEGITEXT000006072050&dateTexte=20080501&categorieLien=id&oldAction=&nbResultRech="
      title="Consultez l’article l1243-9 du code du travail"
    >
      Article L1243-9 du code du travail
    </a>
  </p>
  <p>
    En savoir plus sur la prime de précarité d’un
     
    <a
      href="/fiche-service-public/contrat-de-travail-temporaire-interim"
    >
      salarié en contrat de travail temporaire (contrat d’intérim)
    </a>
  </p>
</div>
`;
